@@ -27,15 +27,17 @@ import java.io.PrintWriter;
 import java.io.Reader;
 import java.io.UnsupportedEncodingException;
 import java.io.Writer;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
-import java.util.concurrent.CopyOnWriteArrayList;
+import java.util.stream.Collectors;
 
 import casciian.TKeypress;
 import casciian.backend.Backend;
 import casciian.backend.ECMA48Terminal;
+import casciian.backend.Screen;
 import casciian.bits.ImageRGB;
 import casciian.bits.Clipboard;
 import casciian.bits.Color;
@@ -274,7 +276,7 @@ public class ECMA48 implements Runnable {
     /**
      * When true, an operation modified the visible display.
      */
-    private boolean screenIsDirty = true;
+    private volatile boolean screenIsDirty = true;
 
     /**
      * When true, synchronized update has already pushed a screen to the
@@ -738,21 +740,21 @@ public class ECMA48 implements Runnable {
 
         csiParams         = new ArrayList<>();
         tabStops          = new ArrayList<>();
-        scrollback        = new CopyOnWriteArrayList<>();
-        display           = new CopyOnWriteArrayList<>();
+        scrollback        = new ArrayList<>();
+        display           = new ArrayList<>();
 
         this.type         = type;
-        if (inputStream instanceof TimeoutInputStream) {
-            this.inputStream  = (TimeoutInputStream) inputStream;
+        if (inputStream instanceof TimeoutInputStream timeoutInputStream) {
+            this.inputStream  = timeoutInputStream;
         } else {
             this.inputStream  = new TimeoutInputStream(inputStream,
                 ((inputStream instanceof FileInputStream) ? 0 : 2000));
         }
         if (type == DeviceType.XTERM) {
             this.input    = new InputStreamReader(new BufferedInputStream(
-                this.inputStream, 1024 * 128), "UTF-8");
+                this.inputStream, 1024 * 128), StandardCharsets.UTF_8);
             this.output   = new OutputStreamWriter(new
-                BufferedOutputStream(outputStream), "UTF-8");
+                BufferedOutputStream(outputStream), StandardCharsets.UTF_8);
             this.outputStream = null;
         } else {
             this.output       = null;
@@ -800,8 +802,8 @@ public class ECMA48 implements Runnable {
 
         while (!done && !stopReaderThread) {
             synchronized (userQueue) {
-                while (userQueue.size() > 0) {
-                    handleUserEvent(userQueue.remove(0));
+                while (!userQueue.isEmpty()) {
+                    handleUserEvent(userQueue.removeFirst());
                 }
             }
 
@@ -812,14 +814,12 @@ public class ECMA48 implements Runnable {
                 if (utf8) {
                     if (readBufferUTF8.length < n) {
                         // The buffer wasn't big enough, make it huger
-                        int newSizeHalf = Math.max(readBufferUTF8.length, n);
-                        readBufferUTF8 = new char[newSizeHalf * 2];
+                        readBufferUTF8 = new char[n * 2];
                     }
                 } else {
                     if (readBuffer.length < n) {
                         // The buffer wasn't big enough, make it huger
-                        int newSizeHalf = Math.max(readBuffer.length, n);
-                        readBuffer = new byte[newSizeHalf * 2];
+                        readBuffer = new byte[n * 2];
                     }
                 }
                 if (n == 0) {
@@ -833,6 +833,19 @@ public class ECMA48 implements Runnable {
                         // Special case: force a read of files in order
                         // to see the EOF.
                     } else {
+                        // Check if the screen was modified and needs an update.
+                        // Synchronize to avoid race conditions with resize
+                        // operations that modify screenIsDirty.
+                        TerminalState stateToPost = null;
+                        synchronized (this) {
+                            if (screenIsDirty && (terminalListener != null)) {
+                                stateToPost = captureState();
+                                screenIsDirty = false;
+                            }
+                        }
+                        if (stateToPost != null) {
+                            terminalListener.postUpdate(stateToPost);
+                        }
                         // Go back to waiting.
                         continue;
                     }
@@ -895,9 +908,17 @@ public class ECMA48 implements Runnable {
                         }
                     }
                     // Permit my enclosing UI to know that I updated.
-                    if ((terminalListener != null) && !doNotUpdateDisplay) {
-                        terminalListener.postUpdate(captureState());
-                        screenIsDirty = false;
+                    // Synchronize to avoid race conditions with resize
+                    // operations that modify screenIsDirty.
+                    TerminalState stateToPost = null;
+                    synchronized (this) {
+                        if ((terminalListener != null) && !doNotUpdateDisplay) {
+                            stateToPost = captureState();
+                            screenIsDirty = false;
+                        }
+                    }
+                    if (stateToPost != null) {
+                        terminalListener.postUpdate(stateToPost);
                     }
                     doNotUpdateDisplay = false;
                 }
@@ -910,7 +931,7 @@ public class ECMA48 implements Runnable {
                 // but it is related to the spawned process rather than the
                 // actual UI.  We will generate the stack trace, and consume
                 // it as though it was emitted by the shell.
-                CharArrayWriter writer = new CharArrayWriter();
+                var writer = new CharArrayWriter();
                 // Send a ST and RIS to clear the emulator state.
                 try {
                     writer.write("\033\\\033c");
@@ -920,12 +941,12 @@ public class ECMA48 implements Runnable {
                 } catch (IOException e2) {
                     // SQUASH
                 }
-                char [] stackTrace = writer.toCharArray();
-                for (int i = 0; i < stackTrace.length; i++) {
-                    if (stackTrace[i] == '\n') {
+                var stackTrace = writer.toCharArray();
+                for (char c : stackTrace) {
+                    if (c == '\n') {
                         consume('\r');
                     }
-                    consume(stackTrace[i]);
+                    consume(c);
                 }
             }
 
@@ -994,11 +1015,11 @@ public class ECMA48 implements Runnable {
      * @param event the input event to consume
      */
     private void handleUserEvent(final TInputEvent event) {
-        if (event instanceof TKeypressEvent) {
-            keypress(((TKeypressEvent) event).getKey());
+        if (event instanceof TKeypressEvent keypressEvent) {
+            keypress(keypressEvent.getKey());
         }
-        if (event instanceof TMouseEvent) {
-            mouse((TMouseEvent) event);
+        if (event instanceof TMouseEvent mouseEvent) {
+            mouse(mouseEvent);
         }
     }
 
@@ -1019,7 +1040,7 @@ public class ECMA48 implements Runnable {
      * @return the terminal state that can be used by an external user
      * interface
      */
-    public TerminalState captureState() {
+    public synchronized TerminalState captureState() {
         return new TerminalState(currentState.attr, width, height,
             scrollback, display, cursorVisible,
             currentState.cursorX, currentState.cursorY,
@@ -1036,7 +1057,7 @@ public class ECMA48 implements Runnable {
      * @param scrollBottom the number of rows from the bottom to scroll back
      * @return a copy of the display + scrollback buffers
      */
-    private final List<DisplayLine> getVisibleDisplay(final int visibleHeight,
+    private List<DisplayLine> getVisibleDisplay(final int visibleHeight,
         final int scrollBottom) {
 
         assert (visibleHeight >= 0);
@@ -1056,7 +1077,7 @@ public class ECMA48 implements Runnable {
 
         int visibleBottom = scrollback.size() + display.size() - scrollBottom;
 
-        List<DisplayLine> preceedingBlankLines = new ArrayList<>();
+        var preceedingBlankLines = new ArrayList<DisplayLine>();
         int visibleTop = visibleBottom - visibleHeight;
         if (visibleTop < 0) {
             for (int i = visibleTop; i < 0; i++) {
@@ -1066,11 +1087,11 @@ public class ECMA48 implements Runnable {
         }
         assert (visibleTop >= 0);
 
-        List<DisplayLine> displayLines = new ArrayList<>();
+        var displayLines = new ArrayList<DisplayLine>(scrollback.size() + display.size());
         displayLines.addAll(scrollback);
         displayLines.addAll(display);
 
-        List<DisplayLine> visibleLines = new ArrayList<>();
+        var visibleLines = new ArrayList<DisplayLine>(visibleHeight);
         visibleLines.addAll(preceedingBlankLines);
         visibleLines.addAll(displayLines.subList(visibleTop,
                 Math.min(visibleBottom, displayLines.size())));
@@ -1092,8 +1113,8 @@ public class ECMA48 implements Runnable {
      * @return a deep copy of the buffer's data
      */
     private List<DisplayLine> copyBuffer(final List<DisplayLine> buffer) {
-        List<DisplayLine> result = new ArrayList<>(buffer.size());
-        for (DisplayLine line: buffer) {
+        var result = new ArrayList<DisplayLine>(buffer.size());
+        for (DisplayLine line : buffer) {
             result.add(new DisplayLine(line));
         }
         return result;
@@ -1106,28 +1127,17 @@ public class ECMA48 implements Runnable {
      * this.type
      */
     private String deviceTypeResponse() {
-        switch (type) {
-        case VT100:
-            // "I am a VT100 with advanced video option" (often VT102)
-            return "\033[?1;2c";
-
-        case VT102:
-            // "I am a VT102"
-            return "\033[?6c";
-
-        case VT220:
-        case XTERM:
-            // "I am a VT220" - 7 bit version, with sixel and Casciian image
-            // support, and OSC 52.
-            if (!s8c1t) {
-                return "\033[?62;1;6;9;4;22;52;444c";
-            }
-            // "I am a VT220" - 8 bit version, with sixel and Casciian image
-            // support, and OSC 52.
-            return "\u009b?62;1;6;9;4;22;52;444c";
-        default:
-            throw new IllegalArgumentException("Invalid device type: " + type);
-        }
+        return switch (type) {
+            case VT100 ->
+                // "I am a VT100 with advanced video option" (often VT102)
+                "\033[?1;2c";
+            case VT102 ->
+                // "I am a VT102"
+                "\033[?6c";
+            case VT220, XTERM ->
+                // "I am a VT220" with sixel and Casciian image support, and OSC 52.
+                s8c1t ? "\u009b?62;1;6;9;4;22;52;445c" : "\033[?62;1;6;9;4;22;52;445c";
+        };
     }
 
     /**
@@ -1139,23 +1149,12 @@ public class ECMA48 implements Runnable {
      * @return "vt100", "xterm", etc.
      */
     public static String deviceTypeTerm(final DeviceType deviceType) {
-        switch (deviceType) {
-        case VT100:
-            return "vt100";
-
-        case VT102:
-            return "vt102";
-
-        case VT220:
-            return "vt220";
-
-        case XTERM:
-            return "xterm";
-
-        default:
-            throw new IllegalArgumentException("Invalid device type: "
-                + deviceType);
-        }
+        return switch (deviceType) {
+            case VT100 -> "vt100";
+            case VT102 -> "vt102";
+            case VT220 -> "vt220";
+            case XTERM -> "xterm";
+        };
     }
 
     /**
@@ -1171,20 +1170,10 @@ public class ECMA48 implements Runnable {
     public static String deviceTypeLang(final DeviceType deviceType,
         final String baseLang) {
 
-        switch (deviceType) {
-
-        case VT100:
-        case VT102:
-        case VT220:
-            return baseLang;
-
-        case XTERM:
-            return baseLang + ".UTF-8";
-
-        default:
-            throw new IllegalArgumentException("Invalid device type: "
-                + deviceType);
-        }
+        return switch (deviceType) {
+            case VT100, VT102, VT220 -> baseLang;
+            case XTERM -> baseLang + ".UTF-8";
+        };
     }
 
     /**
@@ -1192,7 +1181,7 @@ public class ECMA48 implements Runnable {
      *
      * @param str string to send
      */
-    public void writeRemote(final String str) {
+    public synchronized void writeRemote(final String str) {
         if (stopReaderThread) {
             // Reader hit EOF, bail out now.
             close();
@@ -1241,7 +1230,7 @@ public class ECMA48 implements Runnable {
      * Close the input and output streams and stop the reader thread.  Note
      * that it is safe to call this multiple times.
      */
-    public final void close() {
+    public final synchronized void close() {
 
         // Tell the reader thread to stop looking at input.  It will close
         // the input streams.
@@ -1363,15 +1352,15 @@ public class ECMA48 implements Runnable {
             savedState.cursorY = height - 1;
         }
         while (display.size() < height) {
-            if (scrollback.size() == 0) {
-                DisplayLine line = new DisplayLine(currentState.attr);
+            if (scrollback.isEmpty()) {
+                var line = new DisplayLine(currentState.attr);
                 line.setReverseColor(reverseVideo);
-                scrollback.add(0, line);
+                scrollback.addFirst(line);
             }
-            display.add(0, scrollback.remove(scrollback.size() - 1));
+            display.addFirst(scrollback.removeLast());
         }
         while (display.size() > height) {
-            appendScrollbackLine(display.remove(0));
+            appendScrollbackLine(display.removeFirst());
         }
     }
 
@@ -1381,7 +1370,7 @@ public class ECMA48 implements Runnable {
      * @param scrollbackMax the maximum number of lines for the scrollback
      * buffer
      */
-    public final void setScrollbackMax(final int scrollbackMax) {
+    public final synchronized void setScrollbackMax(final int scrollbackMax) {
         this.scrollbackMax = scrollbackMax;
     }
 
@@ -1408,14 +1397,11 @@ public class ECMA48 implements Runnable {
      * Reset the 88- or 256-colors.
      */
     private void resetColors() {
-        colors88 = new ArrayList<>(256);
-        for (int i = 0; i < 256; i++) {
-            colors88.add(0);
-        }
+        colors88 = new ArrayList<>(Collections.nCopies(256, 0));
 
         if (backend != null) {
             // Set default system colors to match the backend.
-            CellAttributes attr = new CellAttributes();
+            var attr = new CellAttributes();
             for (int i = 0; i < 8; i++) {
                 attr.setForeColor(Color.getSgrColor(i));
                 colors88.set(i, backend.attrToForegroundColor(attr));
@@ -1423,8 +1409,7 @@ public class ECMA48 implements Runnable {
             attr.setBold(true);
             for (int i = 0; i < 8; i++) {
                 attr.setForeColor(Color.getSgrColor(i));
-                colors88.set(i + 8,
-                    backend.attrToForegroundColor(attr));
+                colors88.set(i + 8, backend.attrToForegroundColor(attr));
             }
         } else {
             // Set default system colors.  These match DOS colors.
@@ -1883,8 +1868,9 @@ public class ECMA48 implements Runnable {
                 scrollback.remove(0);
             }
         }
-        display.remove(0);
-        DisplayLine line = new DisplayLine(currentState.attr);
+        display.removeFirst();
+        display.trimToSize();
+        var line = new DisplayLine(currentState.attr);
         line.setReverseColor(reverseVideo);
         display.add(line);
         screenIsDirty = true;
@@ -1915,7 +1901,7 @@ public class ECMA48 implements Runnable {
      * Reverse the color of the visible display.
      */
     private void invertDisplayColors() {
-        for (DisplayLine line: display) {
+        for (DisplayLine line : display) {
             line.setReverseColor(!line.isReverseColor());
         }
         screenIsDirty = true;
@@ -1968,10 +1954,7 @@ public class ECMA48 implements Runnable {
      */
     private void printEmojiXY(final int x, final int y, final int wcWidth) {
         screenIsDirty = true;
-        int [] codePoints = new int[repCodePoints.size()];
-        for (int i = 0; i < repCodePoints.size(); i++) {
-            codePoints[i] = repCodePoints.get(i);
-        }
+        var codePoints = repCodePoints.stream().mapToInt(Integer::intValue).toArray();
 
         // The first codepoint in a sequence might have been narrow-width.
         // If so, advance the cursor to make room for the right half.
@@ -1979,16 +1962,12 @@ public class ECMA48 implements Runnable {
             printCharacter(' ');
         }
 
-        ComplexCell cell = new ComplexCell(codePoints, currentState.attr);
-        if (wcWidth == 2) {
-            cell.setWidth(Cell.Width.LEFT);
-        } else {
-            cell.setWidth(Cell.Width.SINGLE);
-        }
+        var cell = new ComplexCell(codePoints, currentState.attr);
+        cell.setWidth(wcWidth == 2 ? Cell.Width.LEFT : Cell.Width.SINGLE);
         display.get(y).replace(x, cell);
 
         if (wcWidth == 2) {
-            ComplexCell right = new ComplexCell(cell);
+            var right = new ComplexCell(cell);
             right.setWidth(Cell.Width.RIGHT);
             display.get(y).replace(x + 1, right);
         }
@@ -2049,11 +2028,10 @@ public class ECMA48 implements Runnable {
             wrapLineFlag = false;
         }
 
-        // "Print" the character
-        ComplexCell newCell = new ComplexCell(ch);
+        var newCell = new ComplexCell(ch);
         CellAttributes newCellAttributes = newCell;
         newCellAttributes.setTo(currentState.attr);
-        DisplayLine line = display.get(currentState.cursorY);
+        var line = display.get(currentState.cursorY);
 
         // Insert mode special case
         if (insertMode) {
@@ -2140,8 +2118,8 @@ public class ECMA48 implements Runnable {
             break;
         }
 
-        // Now encode the event
-        StringBuilder sb = new StringBuilder(6);
+        // Now encode the event - capacity 32 for typical SGR mouse sequence like "\x1b[<0;123;456M"
+        var sb = new StringBuilder(32);
         if (mouseEncoding == MouseEncoding.SGR) {
             sb.append((char) 0x1B);
             sb.append("[<");
@@ -2324,45 +2302,41 @@ public class ECMA48 implements Runnable {
                 // Local echo for everything else
                 printCharacter(keypress.getChar());
             }
-            if (terminalListener != null) {
-                terminalListener.postUpdate(captureState());
-                screenIsDirty = false;
+            // Synchronize to avoid race conditions with resize
+            // operations that modify screenIsDirty.
+            TerminalState stateToPost = null;
+            synchronized (this) {
+                if (terminalListener != null) {
+                    stateToPost = captureState();
+                    screenIsDirty = false;
+                }
+            }
+            if (stateToPost != null) {
+                terminalListener.postUpdate(stateToPost);
             }
         }
 
-        if ((newLineMode == true) && (keypress.equals(kbEnter))) {
+        if (newLineMode && keypress.equals(kbEnter)) {
             // NLM: send CRLF
             return "\015\012";
         }
 
         // Handle control characters
-        if ((keypress.isCtrl()) && (!keypress.isFnKey())) {
-            StringBuilder sb = new StringBuilder();
-            int ch = keypress.getChar();
-            ch &= 0x1F;
-            sb.append(Character.toChars(ch));
-            return sb.toString();
+        if (keypress.isCtrl() && !keypress.isFnKey()) {
+            int ch = keypress.getChar() & 0x1F;
+            return new String(Character.toChars(ch));
         }
 
         // Handle alt characters
-        if ((keypress.isAlt()) && (!keypress.isFnKey())) {
-            StringBuilder sb = new StringBuilder("\033");
-            int ch = keypress.getChar();
-            sb.append(Character.toChars(ch));
-            return sb.toString();
+        if (keypress.isAlt() && !keypress.isFnKey()) {
+            return "\033" + new String(Character.toChars(keypress.getChar()));
         }
 
         if (keypress.equals(kbBackspaceDel)) {
-            switch (type) {
-            case VT100:
-                return "\010";
-            case VT102:
-                return "\010";
-            case VT220:
-                return "\177";
-            case XTERM:
-                return "\177";
-            }
+            return switch (type) {
+                case VT100, VT102 -> "\010";
+                case VT220, XTERM -> "\177";
+            };
         }
 
         if (keypress.equalsWithoutModifiers(kbLeft)) {
@@ -2886,22 +2860,13 @@ public class ECMA48 implements Runnable {
             return "\011";
         }
 
-        if ((keypress.equalsWithoutModifiers(kbBackTab)) ||
-            (keypress.equals(kbShiftTab))
-        ) {
-            switch (type) {
-            case XTERM:
-                return "\033[Z";
-            default:
-                return "\011";
-            }
+        if (keypress.equalsWithoutModifiers(kbBackTab) || keypress.equals(kbShiftTab)) {
+            return type == DeviceType.XTERM ? "\033[Z" : "\011";
         }
 
         // Non-alt, non-ctrl characters
         if (!keypress.isFnKey()) {
-            StringBuilder sb = new StringBuilder();
-            sb.append(Character.toChars(keypress.getChar()));
-            return sb.toString();
+            return new String(Character.toChars(keypress.getChar()));
         }
         return "";
     }
@@ -2923,68 +2888,29 @@ public class ECMA48 implements Runnable {
         CharacterSet lookupCharset = charsetGl;
 
         if (ch >= 0x80) {
-            assert ((type == DeviceType.VT220) || (type == DeviceType.XTERM));
+            assert (type == DeviceType.VT220 || type == DeviceType.XTERM);
             lookupCharset = charsetGr;
             lookupChar &= 0x7F;
         }
 
-        switch (lookupCharset) {
-
-        case DRAWING:
-            return DECCharacterSets.SPECIAL_GRAPHICS[lookupChar];
-
-        case UK:
-            return DECCharacterSets.UK[lookupChar];
-
-        case US:
-            return DECCharacterSets.US_ASCII[lookupChar];
-
-        case NRC_DUTCH:
-            return DECCharacterSets.NL[lookupChar];
-
-        case NRC_FINNISH:
-            return DECCharacterSets.FI[lookupChar];
-
-        case NRC_FRENCH:
-            return DECCharacterSets.FR[lookupChar];
-
-        case NRC_FRENCH_CA:
-            return DECCharacterSets.FR_CA[lookupChar];
-
-        case NRC_GERMAN:
-            return DECCharacterSets.DE[lookupChar];
-
-        case NRC_ITALIAN:
-            return DECCharacterSets.IT[lookupChar];
-
-        case NRC_NORWEGIAN:
-            return DECCharacterSets.NO[lookupChar];
-
-        case NRC_SPANISH:
-            return DECCharacterSets.ES[lookupChar];
-
-        case NRC_SWEDISH:
-            return DECCharacterSets.SV[lookupChar];
-
-        case NRC_SWISS:
-            return DECCharacterSets.SWISS[lookupChar];
-
-        case DEC_SUPPLEMENTAL:
-            return DECCharacterSets.DEC_SUPPLEMENTAL[lookupChar];
-
-        case VT52_GRAPHICS:
-            return DECCharacterSets.VT52_SPECIAL_GRAPHICS[lookupChar];
-
-        case ROM:
-            return DECCharacterSets.US_ASCII[lookupChar];
-
-        case ROM_SPECIAL:
-            return DECCharacterSets.US_ASCII[lookupChar];
-
-        default:
-            throw new IllegalArgumentException("Invalid character set value: "
-                + lookupCharset);
-        }
+        return switch (lookupCharset) {
+            case DRAWING -> DECCharacterSets.SPECIAL_GRAPHICS[lookupChar];
+            case UK -> DECCharacterSets.UK[lookupChar];
+            case US -> DECCharacterSets.US_ASCII[lookupChar];
+            case NRC_DUTCH -> DECCharacterSets.NL[lookupChar];
+            case NRC_FINNISH -> DECCharacterSets.FI[lookupChar];
+            case NRC_FRENCH -> DECCharacterSets.FR[lookupChar];
+            case NRC_FRENCH_CA -> DECCharacterSets.FR_CA[lookupChar];
+            case NRC_GERMAN -> DECCharacterSets.DE[lookupChar];
+            case NRC_ITALIAN -> DECCharacterSets.IT[lookupChar];
+            case NRC_NORWEGIAN -> DECCharacterSets.NO[lookupChar];
+            case NRC_SPANISH -> DECCharacterSets.ES[lookupChar];
+            case NRC_SWEDISH -> DECCharacterSets.SV[lookupChar];
+            case NRC_SWISS -> DECCharacterSets.SWISS[lookupChar];
+            case DEC_SUPPLEMENTAL -> DECCharacterSets.DEC_SUPPLEMENTAL[lookupChar];
+            case VT52_GRAPHICS -> DECCharacterSets.VT52_SPECIAL_GRAPHICS[lookupChar];
+            case ROM, ROM_SPECIAL -> DECCharacterSets.US_ASCII[lookupChar];
+        };
     }
 
     /**
@@ -3307,12 +3233,12 @@ public class ECMA48 implements Runnable {
      * Advance the cursor to the next tab stop.
      */
     private void advanceToNextTabStop() {
-        if (tabStops.size() == 0) {
+        if (tabStops.isEmpty()) {
             // Go to the rightmost column
             cursorRight(rightMargin - currentState.cursorX, false);
             return;
         }
-        for (Integer stop: tabStops) {
+        for (Integer stop : tabStops) {
             if (stop > currentState.cursorX) {
                 cursorRight(stop - currentState.cursorX, false);
                 return;
@@ -4148,8 +4074,9 @@ public class ECMA48 implements Runnable {
      */
     private void decswl() {
         screenIsDirty = true;
-        display.get(currentState.cursorY).setDoubleWidth(false);
-        display.get(currentState.cursorY).setDoubleHeight(0);
+        var line = display.get(currentState.cursorY);
+        line.setDoubleWidth(false);
+        line.setDoubleHeight(0);
     }
 
     /**
@@ -4157,8 +4084,9 @@ public class ECMA48 implements Runnable {
      */
     private void decdwl() {
         screenIsDirty = true;
-        display.get(currentState.cursorY).setDoubleWidth(true);
-        display.get(currentState.cursorY).setDoubleHeight(0);
+        var line = display.get(currentState.cursorY);
+        line.setDoubleWidth(true);
+        line.setDoubleHeight(0);
     }
 
     /**
@@ -4169,12 +4097,9 @@ public class ECMA48 implements Runnable {
      */
     private void dechdl(final boolean topHalf) {
         screenIsDirty = true;
-        display.get(currentState.cursorY).setDoubleWidth(true);
-        if (topHalf == true) {
-            display.get(currentState.cursorY).setDoubleHeight(1);
-        } else {
-            display.get(currentState.cursorY).setDoubleHeight(2);
-        }
+        var line = display.get(currentState.cursorY);
+        line.setDoubleWidth(true);
+        line.setDoubleHeight(topHalf ? 1 : 2);
     }
 
     /**
@@ -4182,8 +4107,8 @@ public class ECMA48 implements Runnable {
      */
     private void decaln() {
         screenIsDirty = true;
-        ComplexCell newCell = new ComplexCell('E');
-        for (DisplayLine line: display) {
+        var newCell = new ComplexCell('E');
+        for (DisplayLine line : display) {
             for (int i = 0; i < line.length(); i++) {
                 line.replace(i, newCell);
             }
@@ -4388,8 +4313,8 @@ public class ECMA48 implements Runnable {
     private void dch() {
         screenIsDirty = true;
         int n = getCsiParam(0, 1);
-        DisplayLine line = display.get(currentState.cursorY);
-        ComplexCell blank = new ComplexCell();
+        var line = display.get(currentState.cursorY);
+        var blank = new ComplexCell();
         for (int i = 0; i < n; i++) {
             line.delete(currentState.cursorX, blank);
         }
@@ -4401,8 +4326,8 @@ public class ECMA48 implements Runnable {
     private void ich() {
         screenIsDirty = true;
         int n = getCsiParam(0, 1);
-        DisplayLine line = display.get(currentState.cursorY);
-        ComplexCell blank = new ComplexCell();
+        var line = display.get(currentState.cursorY);
+        var blank = new ComplexCell();
         for (int i = 0; i < n; i++) {
             line.insert(currentState.cursorX, blank);
         }
@@ -5251,14 +5176,10 @@ public class ECMA48 implements Runnable {
     private void tbc() {
         int i = getCsiParam(0, 0);
         if (i == 0) {
-            List<Integer> newStops = new ArrayList<>();
-            for (Integer stop: tabStops) {
-                if (stop == currentState.cursorX) {
-                    continue;
-                }
-                newStops.add(stop);
-            }
-            tabStops = newStops;
+            final int cursorX = currentState.cursorX;
+            tabStops = tabStops.stream()
+                .filter(stop -> stop != cursorX)
+                .collect(Collectors.toCollection(ArrayList::new));
         }
         if (i == 3) {
             tabStops.clear();
@@ -5289,31 +5210,26 @@ public class ECMA48 implements Runnable {
             start = 0;
         }
 
+        var line = display.get(currentState.cursorY);
         for (int i = start; i <= end; i++) {
-            DisplayLine line = display.get(currentState.cursorY);
-            if ((!honorProtected)
-                || ((honorProtected) && (!line.charAt(i).isProtect()))) {
-
+            if (!honorProtected || !line.charAt(i).isProtect()) {
                 switch (type) {
-                case VT100:
-                case VT102:
-                case VT220:
-                    /*
-                     * From the VT102 manual:
-                     *
-                     * Erasing a character also erases any character
-                     * attribute of the character.
-                     */
-                    line.setBlank(i);
-                    break;
-                case XTERM:
-                    /*
-                     * Erase with the current color a.k.a. back-color erase
-                     * (bce).
-                     */
-                    line.setChar(i, ' ');
-                    line.setAttr(i, currentState.attr);
-                    break;
+                    case VT100, VT102, VT220 ->
+                        /*
+                         * From the VT102 manual:
+                         *
+                         * Erasing a character also erases any character
+                         * attribute of the character.
+                         */
+                        line.setBlank(i);
+                    case XTERM -> {
+                        /*
+                         * Erase with the current color a.k.a. back-color erase
+                         * (bce).
+                         */
+                        line.setChar(i, ' ');
+                        line.setAttr(i, currentState.attr);
+                    }
                 }
             }
         }
@@ -5451,14 +5367,11 @@ public class ECMA48 implements Runnable {
 
         // Xterm cases...
         if (oscEnd) {
-            String args = null;
-            if (xtermChar == 0x07) {
-                args = collectBuffer.substring(0, collectBuffer.length() - 1);
-            } else {
-                args = collectBuffer.substring(0, collectBuffer.length() - 2);
-            }
+            var args = xtermChar == 0x07
+                ? collectBuffer.substring(0, collectBuffer.length() - 1)
+                : collectBuffer.substring(0, collectBuffer.length() - 2);
 
-            String [] p = args.split(";");
+            var p = args.split(";");
             if (p.length > 0) {
                 if ((p[0].equals("0")) || (p[0].equals("2"))) {
                     if (p.length > 1) {
@@ -5569,7 +5482,7 @@ public class ECMA48 implements Runnable {
                     }
                 }
 
-                if (p[0].equals("444")) {
+                if (p[0].equals("445")) {
                     if ((p.length == 6) && p[1].equals("0")) {
                         // Jexer image - RGB
                         parseJexerImageRGB(p[2], p[3], p[4], p[5]);
@@ -5649,13 +5562,13 @@ public class ECMA48 implements Runnable {
                 // Report xterm text area size in pixels as CSI 4 ; height ;
                 // width t
                 writeRemote(String.format("%s4;%d;%dt", CSI,
-                            textHeight * height, textWidth * width));
+                            getActualTextHeight() * height, getActualTextWidth() * width));
                 break;
             case 16:
                 // Report character size in pixels as CSI 6 ; height ; width
                 // t
                 writeRemote(String.format("%s6;%d;%dt", CSI,
-                            textHeight, textWidth));
+                            getActualTextHeight(), getActualTextWidth()));
                 break;
             case 18:
                 // Report the text are size in characters as CSI 8 ; height ;
@@ -5755,12 +5668,8 @@ public class ECMA48 implements Runnable {
 
         byte [] textBytes = textToCopy.getBytes();
         String clipboardText = null;
-        try {
-            clipboardText = new String(StringUtils.fromBase64(textBytes),
-                "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            // SQUASH
-        }
+        clipboardText = new String(StringUtils.fromBase64(textBytes),
+            StandardCharsets.UTF_8);
 
         /*
         System.err.println("xtermCopyClipboard() " + clipboards + " --> "
@@ -8230,7 +8139,7 @@ public class ECMA48 implements Runnable {
      *
      * @param textWidth the width in pixels of a character cell
      */
-    public void setTextWidth(final int textWidth) {
+    public synchronized void setTextWidth(final int textWidth) {
         this.textWidth = textWidth;
     }
 
@@ -8239,15 +8148,61 @@ public class ECMA48 implements Runnable {
      *
      * @param textHeight the height in pixels of a character cell
      */
-    public void setTextHeight(final int textHeight) {
+    public synchronized void setTextHeight(final int textHeight) {
         this.textHeight = textHeight;
+    }
+
+    /**
+     * Get the actual width of a character cell in pixels, preferring the
+     * backend's value if available.
+     *
+     * @return the width in pixels of a character cell (minimum 16)
+     */
+    private synchronized int getActualTextWidth() {
+        if (backend != null) {
+            Screen screen = backend.getScreen();
+            if (screen != null) {
+                int backendWidth = screen.getTextWidth();
+                if (backendWidth > 0) {
+                    return backendWidth;
+                }
+            }
+        }
+        if (textWidth > 0) {
+            return textWidth;
+        }
+        // Fallback to a sane minimum to avoid zero/negative widths breaking image math
+        return 16;
+    }
+
+    /**
+     * Get the actual height of a character cell in pixels, preferring the
+     * backend's value if available.
+     *
+     * @return the height in pixels of a character cell (minimum 20)
+     */
+    private synchronized int getActualTextHeight() {
+        if (backend != null) {
+            Screen screen = backend.getScreen();
+            if (screen != null) {
+                int backendHeight = screen.getTextHeight();
+                if (backendHeight > 0) {
+                    return backendHeight;
+                }
+            }
+        }
+        if (textHeight > 0) {
+            return textHeight;
+        }
+        // Fallback to a sane minimum to avoid zero/negative heights breaking image math
+        return 20;
     }
 
     /**
      * Let the application know this terminal gained focus, if it has enabled
      * FOCUS_MOUSE_MODE.
      */
-    public void onFocus() {
+    public synchronized void onFocus() {
         if (focusMouseMode) {
             writeRemote("\033[I");
         }
@@ -8257,7 +8212,7 @@ public class ECMA48 implements Runnable {
      * Let the application know this terminal lost focus, if it has enabled
      * FOCUS_MOUSE_MODE.
      */
-    public void onUnfocus() {
+    public synchronized void onUnfocus() {
         if (focusMouseMode) {
             writeRemote("\033[O");
         }
@@ -8369,6 +8324,9 @@ public class ECMA48 implements Runnable {
 
         int oldCursorX = currentState.cursorX;
         int oldCursorY = currentState.cursorY;
+        // Get actual text cell dimensions from the backend
+        int actualTextWidth = getActualTextWidth();
+        int actualTextHeight = getActualTextHeight();
         if (!sixelScrolling) {
             currentState.cursorX = 0;
             currentState.cursorY = 0;
@@ -8379,8 +8337,8 @@ public class ECMA48 implements Runnable {
             imageToCells(image, true, maybeTransparent);
             if (sixelCursorOnRight) {
                 currentState.cursorX = oldCursorX + (image.getWidth() /
-                    textWidth);
-                if ((image.getWidth() % textWidth) != 0) {
+                    actualTextWidth);
+                if ((image.getWidth() % actualTextWidth) != 0) {
                     currentState.cursorX++;
                 }
                 currentState.cursorX = Math.min(currentState.cursorX, width - 1);
@@ -8389,8 +8347,8 @@ public class ECMA48 implements Runnable {
             }
             // Cursor always on bottom row of pixel data.
             currentState.cursorY = oldCursorY;
-            int downY = image.getHeight() / textHeight;
-            if ((image.getHeight() % textHeight) == 0) {
+            int downY = image.getHeight() / actualTextHeight;
+            if ((image.getHeight() % actualTextHeight) == 0) {
                 downY--;
             }
             cursorDown(downY, true);
@@ -8497,12 +8455,16 @@ public class ECMA48 implements Runnable {
         // draw the black underneath the cells.
         boolean transparent = false;
 
-        int cellColumns = image.getWidth() / textWidth;
-        while (cellColumns * textWidth < image.getWidth()) {
+        // Get actual text cell dimensions from the backend
+        int actualTextWidth = getActualTextWidth();
+        int actualTextHeight = getActualTextHeight();
+
+        int cellColumns = image.getWidth() / actualTextWidth;
+        while (cellColumns * actualTextWidth < image.getWidth()) {
             cellColumns++;
         }
-        int cellRows = image.getHeight() / textHeight;
-        while (cellRows * textHeight < image.getHeight()) {
+        int cellRows = image.getHeight() / actualTextHeight;
+        while (cellRows * actualTextHeight < image.getHeight()) {
             cellRows++;
         }
 
@@ -8512,13 +8474,13 @@ public class ECMA48 implements Runnable {
         ComplexCell [][] cells = new ComplexCell[cellColumns][cellRows];
         for (int x = 0; x < cellColumns; x++) {
             for (int y = 0; y < cellRows; y++) {
-                int width = textWidth;
-                if ((x + 1) * textWidth > image.getWidth()) {
-                    width = image.getWidth() - (x * textWidth);
+                int width = actualTextWidth;
+                if ((x + 1) * actualTextWidth > image.getWidth()) {
+                    width = image.getWidth() - (x * actualTextWidth);
                 }
-                int height = textHeight;
-                if ((y + 1) * textHeight > image.getHeight()) {
-                    height = image.getHeight() - (y * textHeight);
+                int height = actualTextHeight;
+                if ((y + 1) * actualTextHeight > image.getHeight()) {
+                    height = image.getHeight() - (y * actualTextHeight);
                 }
 
                 // I'm genuinely not sure if making many small cells with
@@ -8527,8 +8489,8 @@ public class ECMA48 implements Runnable {
                 // we will ALWAYS make a copy.
                 ComplexCell cell = new ComplexCell(currentState.attr);
 
-                ImageRGB imageSlice = image.getSubimage(x * textWidth,
-                    y * textHeight, width, height);
+                ImageRGB imageSlice = image.getSubimage(x * actualTextWidth,
+                    y * actualTextHeight, width, height);
 
                 imageId++;
                 cell.setImage(imageSlice, imageId & 0x7FFFFFFF);
